feat(server): mailing api send-email take params

--- a/server/templates/action.hbs
+++ b/server/templates/action.hbs
@@ -1,3 +1,4 @@
-<p>Hello Kentin !!!!</p>
-<p>Here is your code : {{code}}</p>
+<p>Hello !</p>
+<p>This is a message you have pre-programmed :</p>
+<p>{{message}}</p>
 ```
