--- a/client/web/styles/globals.css
+++ b/client/web/styles/globals.css
@@ -8,4 +8,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.90) !important;
 }
